--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <h2 id="Title">Christian Gillies</h2>
-    <p id = "Contact">945 East 55th Street Brooklyn, NY | Home: 718-444-8285 | Cell: 917-974-5507 </p>
+    <p id = "Contact">adress | Home: number | Cell: number </p>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 #hammericon_begin
