--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
+<!-- Removed CSS (1/14/21)
+#Title {
+    position: center;
+    text-align: center;
+    padding: 14px 16px;
+    color: blue;
+    
+    #Contact {
+    position: center;
+    text-align: center;
+    padding: 14px 16px;
+    color: blue;
+}
+}-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+  
 <head>
+  <div class="container p-5 my-5 bg-dark text-white">
     <h2 id="Title">Christian Gillies</h2>
     <p id = "Contact">adress | Home: number | Cell: number </p>
+  </div>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+  
 <style>
 #hammericon_begin
 {
@@ -26,18 +47,8 @@
     position: relative;
     text-align: center;
 }
-#Title {
-    position: center;
-    text-align: center;
-    padding: 14px 16px;
-    color: blue;
-}
-#Contact {
-    position: center;
-    text-align: center;
-    padding: 14px 16px;
-    color: blue;
-}
+
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -67,7 +78,10 @@ body {
   flex: 65%;
   padding: 15px;
 }
-
+.right-most {
+  flex: 65%;
+  padding: 30px;
+}
 /* Style the search box */
 #mySearch {
   width: 100%;
@@ -88,11 +102,12 @@ body {
   padding: 12px;
   text-decoration: none;
   color: black;
-  display: block
+  display: block;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .2);
 }
 
 #myMenu li a:hover {
-  background-color: #eee;
+  background-color: rgb(255, 255, 255);
 }
 </style>
 </head>
@@ -102,12 +117,12 @@ body {
 <!---<p>Start to type for a specific category inside the search bar to "filter" the search options.</p>--->
 
 <div class="row">
-  <div class="left" style="background-color:rgb(243, 0, 0);">
-    <h2 id = menuheader style="color: #ddd;"><img id="hammericon_begin" src="Hammer_icon.PNG"></img>Projects<img id="hammericon_end" src="Hammer_icon.PNG"></img></h2>
+  <div class="left" style="background-color:rgb(190, 190, 190);">
+    <h2 id = menuheader style="color: rgb(0, 0, 0);"><img id="hammericon_begin" src="Hammer_icon.PNG"></img>Projects<img id="hammericon_end" src="Hammer_icon.PNG"></img></h2>
     <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
     <ul id="myMenu">
-      <li id ="li1"><a onmouseover="show(1)" href="https://replit.com/@chrisgi/Thaco-Calculator#main.cpp">Thaco-Calculator</a></li>
-      <li id ="li2"><a onmouseover="show(2)" href="https://github.com/christo480/Statblock-Image-Extraction">5e Statblock-Image-Extraction</a></li>
+      <li id ="li1"><a onmouseover="show(1)" onmouseout="show(-1)" href="https://replit.com/@chrisgi/Thaco-Calculator#main.cpp">Thaco-Calculator</a></li>
+      <li id ="li2"><a onmouseover="show(2)" onmouseout="show(-1)" href="https://github.com/christo480/Statblock-Image-Extraction">5e Statblock-Image-Extraction</a></li>
       <li><a onclick="show(2)" href="#">Project 3</a></li>
       <li><a href="#">Project 4</a></li>
       <li><a href="#">Project 5</a></li>
@@ -119,18 +134,20 @@ body {
   </div>
   
   <div class="right" style="background-color:rgb(182, 182, 182);">
-    <h2 id=description>Description</h2>
+    <div class=".container-sm">
+      <h2 id=description>Description</h2>
+    </div>
     <p class="right-content"></p>
 
   </div>
+ <!--- <div class="right-most" style="background-color:rgb(182, 182, 182);">
+    <h2 id=description>Description</h2>
+    <p class="right-content"></p>
+
+  </div>--->
 </div>
 
 <script>
-
-element =document.querySelector("li1")
-element.addEventListener("onhover", show(1))
-element =document.querySelector("li2")
-element.addEventListener("onhover", show(2))
 
 function myFunction() {
   var input, filter, ul, li, a, i;
@@ -159,7 +176,7 @@ function show(num)
     }
     if(num==-1)
     {
-        document.getElementById("description").innerHTML="5e Statblock img parse project. <p id= subtext>Used to import homebrew into 5e DMing tools</p>";
+        document.getElementById("description").innerHTML="";
     }
 
 }
