Removed odd extra 'a'

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ body {
     <ul id="myMenu">
       <li id ="li1" class="container"><a onmouseover="show(1)" onmouseout="show(-1)" href="https://replit.com/@chrisgi/Thaco-Calculator#main.cpp">Thaco-Calculator</a></li>
       <li id ="li2" class="container"><a onmouseover="show(2)" onmouseout="show(-1)" href="https://github.com/christo480/Statblock-Image-Extraction">5e Statblock-Image-Extraction</a></li>
-      <li class="container"><a a onmouseover="show(3)" onmouseout="show(-1)" href="DATASCI PROJECT/Data_Sci_project.html">"Crime On Rails" Project</a></li>
+      <li class="container"><a onmouseover="show(3)" onmouseout="show(-1)" href="DATASCI PROJECT/Data_Sci_project.html">"Crime On Rails" Project</a></li>
       <li class="container"><a href="#">Project 4</a></li>
       <li class="container"><a href="#">Project 5</a></li>
       <li class="container"><a href="#">Project 6</a></li>
