--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   
 <head>
-  <div class="container p-5 my-5 bg-dark text-white">
+  <div class="container-lg p-5 my-5 bg-dark text-white">
     <h2 id="Title">Christian Gillies</h2>
     <p id = "Contact">address | Home: number | Cell: number </p>
   </div>
@@ -112,29 +112,8 @@ body {
 </style>
 </head>
 <body>
-
-<!---<h2>Search Menu</h2>---> 
-<!---<p>Start to type for a specific category inside the search bar to "filter" the search options.</p>--->
-
-<div class="row">
-  <div class="left" style="background-color:rgb(190, 190, 190);">
-    <h2 id = menuheader class=".container" style="color: rgb(0, 0, 0);"><img id="hammericon_begin" src="Hammer_icon.PNG"></img>Projects<img id="hammericon_end" src="Hammer_icon.PNG"></img></h2>
-    <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
-    <ul id="myMenu">
-      <li id ="li1" class="container"><a onmouseover="show(1)" onmouseout="show(-1)" href="https://replit.com/@chrisgi/Thaco-Calculator#main.cpp">Thaco-Calculator</a></li>
-      <li id ="li2" class="container"><a onmouseover="show(2)" onmouseout="show(-1)" href="https://github.com/christo480/Statblock-Image-Extraction">5e Statblock-Image-Extraction</a></li>
-      <li class="container"><a onmouseover="show(3)" onmouseout="show(-1)" href="DATASCI PROJECT/Data_Sci_project.html">"Crime On Rails" Project</a></li>
-      <li class="container"><a href="#">Project 4</a></li>
-      <li class="container"><a href="#">Project 5</a></li>
-      <li class="container"><a href="#">Project 6</a></li>
-      <li class="container"><a href="#">Project 7</a></li>
-      <li class="container"><a href="#">Project 8</a></li>
-      <li class="container"><a href="#">Project 9</a></li>
-    </ul>
-  </div>
-  
-  <div class="right" style="background-color:rgb(182, 182, 182);">
-    <div class="card">
+<div class="container-lg" style="background-color:rgb(182, 182, 182);">
+    <div class="card" style="padding: 2%;">
       <p class="container" id=description_title>
         Title.
       </p>
@@ -149,6 +128,27 @@ body {
     <p class="right-content"></p>
 
   </div>
+<!---<h2>Search Menu</h2>---> 
+<!---<p>Start to type for a specific category inside the search bar to "filter" the search options.</p>--->
+<div class="container-md">
+<div class="row">
+  <div class="left" style="background-color:rgb(190, 190, 190);">
+    <!---<h2 id = menuheader class=".container" style="color: rgb(0, 0, 0);"><img id="hammericon_begin" src="Hammer_icon.PNG"></img>Projects<img id="hammericon_end" src="Hammer_icon.PNG"></img></h2>--->
+    <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
+    <ul id="myMenu">
+      <li id ="li1" class="container"><a onmouseover="show(1)" onmouseout="show(-1)" href="https://replit.com/@chrisgi/Thaco-Calculator#main.cpp">Thaco-Calculator</a></li>
+      <li id ="li2" class="container"><a onmouseover="show(2)" onmouseout="show(-1)" href="https://github.com/christo480/Statblock-Image-Extraction">5e Statblock-Image-Extraction</a></li>
+      <li class="container"><a onmouseover="show(3)" onmouseout="show(-1)" href="DATASCI PROJECT/Data_Sci_project.html">"Crime On Rails" Project</a></li>
+      <li class="container"><a href="#">Project 4</a></li>
+      <li class="container"><a href="#">Project 5</a></li>
+      <li class="container"><a href="#">Project 6</a></li>
+      <li class="container"><a href="#">Project 7</a></li>
+      <li class="container"><a href="#">Project 8</a></li>
+      <li class="container"><a href="#">Project 9</a></li>
+    </ul>
+  </div>
+</div>
+  
  <!--- <div class="right-most" style="background-color:rgb(182, 182, 182);">
     <h2 id=description>Description</h2>
     <p class="right-content"></p>
