--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body {
       <li id ="li1" class="container"><a onmouseover="show(1)" onmouseout="show(-1)" href="https://replit.com/@chrisgi/Thaco-Calculator#main.cpp">Thaco-Calculator</a></li>
       <li id ="li2" class="container"><a onmouseover="show(2)" onmouseout="show(-1)" href="https://github.com/christo480/Statblock-Image-Extraction">5e Statblock-Image-Extraction</a></li>
       <li class="container"><a onmouseover="show(3)" onmouseout="show(-1)" href="DATASCI PROJECT/Data_Sci_project.html">"Crime On Rails" Project</a></li>
-      <li class="container"><a href="WEBDEV/Heritage/Dragonborn.json">Json Host</a></li>
+      <li class="container"><a href="WEBDEV/json_gallery.html">Json Host</a></li>
       <li class="container"><a href="#">Project 5</a></li>
       <li class="container"><a href="#">Project 6</a></li>
       <li class="container"><a href="#">Project 7</a></li>
