--- a/WEBDEV/json_gallery.html
+++ b/WEBDEV/json_gallery.html
@@ -33,7 +33,7 @@
         <a href="#" class="list-group-item list-group-item-action active">
             <b>Classes</b>
         </a>
-        <a href="./Heritage/Dragonborn.json" class="list-group-item list-group-item-action">Dragonborn</a>
+        <a href="./Class/Fighter.json" class="list-group-item list-group-item-action">Fighter</a>
         
       </div>
     <div class="list-group" style="padding-bottom: 2%; padding-top: 2%;">
@@ -47,7 +47,7 @@
         <a href="#" class="list-group-item list-group-item-action active">
             <b>Backgrounds</b>
         </a>
-        <a href="./Heritage/Dragonborn.json" class="list-group-item list-group-item-action">Dragonborn</a>
+        <a href="./Background/" class="list-group-item list-group-item-action">Caravaneer</a>
     
     </div>
     <div class="list-group" style="padding-bottom: 2%; padding-top: 2%;">
