--- a/WEBDEV/json_gallery.html
+++ b/WEBDEV/json_gallery.html
@@ -45,6 +45,13 @@
       </div>
     <div class="list-group" style="padding-bottom: 2%; padding-top: 2%;">
         <a href="#" class="list-group-item list-group-item-action active">
+            <b>Culturss</b>
+        </a>
+        <a href="./Culture/Caravaner.json" class="list-group-item list-group-item-action">Caravaner</a>
+    
+    </div>
+    <div class="list-group" style="padding-bottom: 2%; padding-top: 2%;">
+        <a href="#" class="list-group-item list-group-item-action active">
             <b>Backgrounds</b>
         </a>
         <a href="./Background/Farmer.json" class="list-group-item list-group-item-action">Farmer</a>
