--- a/WEBDEV/json_gallery.html
+++ b/WEBDEV/json_gallery.html
@@ -45,7 +45,7 @@
       </div>
     <div class="list-group" style="padding-bottom: 2%; padding-top: 2%;">
         <a href="#" class="list-group-item list-group-item-action active">
-            <b>Culturss</b>
+            <b>Cultures</b>
         </a>
         <a href="./Culture/Caravaner.json" class="list-group-item list-group-item-action">Caravaner</a>
     
