--- a/WEBDEV/json_gallery.html
+++ b/WEBDEV/json_gallery.html
@@ -47,7 +47,7 @@
         <a href="#" class="list-group-item list-group-item-action active">
             <b>Cultures</b>
         </a>
-        <a href="./Culture/Caravaner.json" class="list-group-item list-group-item-action">Caravaner</a>
+        <a href="./Culture/Caravanner.json" class="list-group-item list-group-item-action">Caravaner</a>
     
     </div>
     <div class="list-group" style="padding-bottom: 2%; padding-top: 2%;">
