--- a/index.html
+++ b/index.html
@@ -13,124 +13,44 @@
     padding: 14px 16px;
     color: blue;
 }
-}-->
+}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-  
+-->
+<link href="site_style.css" rel="stylesheet">  
 <head>
-  <div class="container-lg p-5 my-5 bg-dark text-white">
-    <h2 id="Title">Christian Gillies</h2>
-    <p id = "Contact">address | Home: number | Cell: number </p>
-  </div>
+  
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-<style>
-#hammericon_begin
-{
-    width: 5%;
-    height: 5%;
-    padding-right: 8px;
-}
-#hammericon_end
-{    width: 5%;
-    height: 5%;
-    padding-left: 8px;
-}
-#subtext
-{
-    font-size: 6;
-    color: azure;
-}
-#menuheader
-{
-    position: relative;
-    text-align: center;
-}
-
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-/* Create a column layout with Flexbox */
-.row {
-  display: flex;
-}
-
-/* Left column (menu) */
-.left {
-  flex: 35%;
-  padding: 15px 0;
-}
-
-.left h2 {
-  padding-left: 8px;
- 
-}
-
-/* Right column (page content) */
-.right {
-  flex: 65%;
-  padding: 15px;
-}
-.right-most {
-  flex: 65%;
-  padding: 30px;
-}
-/* Style the search box */
-#mySearch {
-  width: 100%;
-  font-size: 18px;
-  padding: 11px;
-  border: 1px solid #ddd;
-}
-
-/* Style the navigation menu inside the left column */
-#myMenu {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  
-}
-
-#myMenu li a {
-  padding: 12px;
-  text-decoration: none;
-  color: black;
-  display: block;
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .2);
-}
-
-#myMenu li a:hover {
-  background-color: rgb(255, 255, 255);
-}
-</style>
 </head>
 <body>
-<div class="container-lg" style="background-color:rgb(182, 182, 182);">
-    <div class="card" style="padding: 2%;">
-      <p class="container" id=description_title>
-        Title.
-      </p>
-        <div class="card-body">
-          <p class="container" id=description>
-            Description.
-          </p>
-        </div>
-      </p>
 
-    </div>
-    <p class="right-content"></p>
-
-  </div>
 <!---<h2>Search Menu</h2>---> 
 <!---<p>Start to type for a specific category inside the search bar to "filter" the search options.</p>--->
-<div class="container-md">
+  
+<div class="container-lg p-5 my-5 bg-grey text-black">
+  <div>
+    <h2 id="Title" font="Consolas">Christian Gillies</h2>
+    <p id = "Contact">address | Home: number | Cell: number </p>
+  </div>
+  <div class="container-md">
+    <div class="container-lg" style="background-color:rgb(182, 182, 182);">
+      <div class="card" style="padding: 2%;">
+        <p class="container" id=description_title>
+          Title.
+        </p>
+          <div class="card-body">
+            <p class="container" id=description>
+              Description.
+            </p>
+          </div>
+        </p>
+
+      </div>
+      <p class="right-content"></p>
+
+  </div>
+
 <div class="row">
   <div class="left" style="background-color:rgb(190, 190, 190);">
     <!---<h2 id = menuheader class=".container" style="color: rgb(0, 0, 0);"><img id="hammericon_begin" src="Hammer_icon.PNG"></img>Projects<img id="hammericon_end" src="Hammer_icon.PNG"></img></h2>--->
