Added contact websites

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
     <div class="container-lg p-5 my-5 bg-grey text-black">
       <div>
         <h2 id="Title" font="Consolas">Christian Gillies</h2>
-        <p id = "Contact">address | Home: number | Cell: number </p>
+        <!--- <p id = "Contact">address | Home: number | Cell: number </p>--->
       </div>
       <div class="tab-content">
-        <p>your text goes here</p>
+        <a href="https://www.linkedin.com/in/christian-gillies-98a67522a/">Linkedin</a>
+        <a href="https://github.com/christo480">Github</a>
       </div>
   </main> 
     
@@ -83,11 +84,11 @@
           </details></a></li>
           <li class="container"><a onmouseover="show(3)" onmouseout="show(-1)" href="DATASCI PROJECT/Data_Sci_project.html">"Crime On Rails" Project</a></li>
           <li class="container"><a href="WEBDEV/json_gallery.html">Json Host</a></li>
-          <li class="container"><a href="#">Project 5</a></li>
+           <!---<li class="container"><a href="#">Project 5</a></li>
           <li class="container"><a href="#">Project 6</a></li>
           <li class="container"><a href="#">Project 7</a></li>
           <li class="container"><a href="#">Project 8</a></li>
-          <li class="container"><a href="#">Project 9</a></li>
+          <li class="container"><a href="#">Project 9</a></li>--->
         </ul>
       </div>
     </div>
